--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
         <header>
             <div class="logo" aria-hidden="true">💘</div>
             <div>
-                <div class="title">Love Calculator</div>
+                <div class="title">Love Calculator P💘H</div>
                 <div class="sub">Fun & deterministic scores — the same names always give the same result.</div>
             </div>
         </header>
@@ -620,5 +620,6 @@
         name1.focus();
     </script>
 </body>
+
 
 </html>
