--- a/index.html
+++ b/index.html
@@ -362,12 +362,12 @@
             <div class="row">
                 <div class="field">
                     <label for="name1">Your Name</label>
-                    <input id="name1" name="name1" type="text" placeholder="e.g., Pavan" required />
+                    <input id="name1" name="name1" type="text" placeholder="e.g., kiran" required />
                 </div>
                 <div class="and"><span>＋</span></div>
                 <div class="field">
                     <label for="name2">Partner's Name</label>
-                    <input id="name2" name="name2" type="text" placeholder="e.g., Priya" required />
+                    <input id="name2" name="name2" type="text" placeholder="e.g., hema" required />
                 </div>
             </div>
 
@@ -623,3 +623,4 @@
 
 
 </html>
+
