--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
         <header>
             <div class="logo" aria-hidden="true">💘</div>
             <div>
-                <div class="title">Love Calculator P💘H</div>
+                <div class="title">Love Calculator</div>
                 <div class="sub">Fun & deterministic scores — the same names always give the same result.</div>
             </div>
         </header>
@@ -362,12 +362,12 @@
             <div class="row">
                 <div class="field">
                     <label for="name1">Your Name</label>
-                    <input id="name1" name="name1" type="text" placeholder="e.g., kiran" required />
+                    <input id="name1" name="name1" type="text" placeholder="e.g., pavan" required />
                 </div>
                 <div class="and"><span>＋</span></div>
                 <div class="field">
                     <label for="name2">Partner's Name</label>
-                    <input id="name2" name="name2" type="text" placeholder="e.g., hema" required />
+                    <input id="name2" name="name2" type="text" placeholder="e.g., harshi" required />
                 </div>
             </div>
 
@@ -623,4 +623,5 @@
 
 
 </html>
+
 
